--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row m-4 shadow bg-white rounded">
+        <div class="col-5">
+            <!--TODO: LEFT MENU-->
+            <div>
+                <!--* IMAGE -->
+                <img>
+            </div>
+            <div>
+                <!--* FORM-->
+                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                    <p class="fs-5 text text-secondary text-center">Ingrese a su cuenta</p>
+                    <!--? Input: Usuario-->
+                    <div class="input-group mb-3">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="floatingInputUser" placeholder #txtUser formControlName="username" required>
+                            <label for="floatingInputUser" class="text-secondary">Usuario</label>
+                        </div>
+                    </div>
+                    <!--? Input: Contraseña-->
+                    <div class="input-group mb-3">
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="floatingInputPass" #txtPassword formControlName="password"  placeholder required>
+                            <label for="floatingInputPass" class="text-secondary">Contraseña</label>
+                        </div>
+                    </div>
+                    <!--? Input: Boton-->
+                    <div class="input-group my-3">
+                        <input type="submit" class="form-control">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-7 bg-body-secondary ">
+            <!--TODO: RIGHT MENU-->
+        </div>
+    </div>
+</div>
