--- a/src/app/components/reportes/reportes.component.html
+++ b/src/app/components/reportes/reportes.component.html
@@ -1,1 +1,10 @@
-<div id="my-tabular-table">Reportes works!</div>
+<button (click)="downloadReport()" id="download-reporte">Descargar reporte</button>
+<div>
+    <button id="download-csv">Download CSV</button>
+    <button id="download-json">Download JSON</button>
+    <button id="download-xlsx">Download XLSX</button>
+    <button id="download-pdf">Download PDF</button>
+    <button id="download-html">Download HTML</button>
+</div>
+<div id="ex-table-div"></div>
+<div id="example-table"></div>
