--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,17 +13,22 @@
                     <!--? Input: Usuario-->
                     <div class="input-group mb-3">
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingInputUser" placeholder #txtUser formControlName="username" required>
+                            <input type="text" class="form-control" id="floatingInputUser" placeholder #txtUser
+                                formControlName="username" required>
                             <label for="floatingInputUser" class="text-secondary">Usuario</label>
                         </div>
                     </div>
                     <!--? Input: Contraseña-->
                     <div class="input-group mb-3">
                         <div class="form-floating">
-                            <input type="password" class="form-control" id="floatingInputPass" #txtPassword formControlName="password"  placeholder required>
+                            <input type="password" class="form-control" id="floatingInputPass" #txtPassword
+                                formControlName="password" placeholder required>
                             <label for="floatingInputPass" class="text-secondary">Contraseña</label>
                         </div>
                     </div>
+                    <!--? Olvido contraseña-->
+
+                    
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
                         <input type="submit" class="form-control">
