--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,8 +27,9 @@
                         </div>
                     </div>
                     <!--? Olvido contraseña-->
-
-                    
+                    <div class="text-center">
+                        <shared-modal></shared-modal>
+                    </div>
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
                         <input type="submit" class="form-control">
