--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -33,6 +33,7 @@
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
                         <input type="submit" class="form-control">
+                        <div></div>
                     </div>
                 </form>
             </div>
