--- a/src/app/components/reportes/reportes.component.html
+++ b/src/app/components/reportes/reportes.component.html
@@ -1,3 +1,4 @@
 <button (click)="downloadReport()" id="download-reporte">Descargar reporte</button>
 <div id="ex-table-div"></div>
 <div id="example-table"></div>
+<a>Pruebba de git</a>
