--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container position-relative ">
-    <div class="row m-4 shadow bg-white rounded">
+<div class="container">
+    <div class="row mx-4 my-5 shadow bg-white rounded">
         <div class="col-5">
             <!--TODO: LEFT MENU-->
             <div>
@@ -33,7 +33,6 @@
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
                         <input type="submit" class="form-control">
-                        <div></div>
                     </div>
                 </form>
             </div>
