--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row mx-4 my-5 shadow bg-white rounded">
+    <div class="row mx-4 my-5 shadow bg-white rounded w-100 h-100 ">
         <div class="col-5">
             <!--TODO: LEFT MENU-->
             <div>
@@ -14,7 +14,7 @@
                     <div class="input-group mb-3">
                         <div class="form-floating">
                             <input type="text" class="form-control" id="floatingInputUser" placeholder #txtUser
-                                formControlName="username" required>
+                                formControlName="username" placeholder required>
                             <label for="floatingInputUser" class="text-secondary">Usuario</label>
                         </div>
                     </div>
@@ -27,12 +27,18 @@
                         </div>
                     </div>
                     <!--? Olvido contraseña-->
-                    <div class="text-center">
+                    <div class="text-center my-3">
                         <shared-modal></shared-modal>
                     </div>
+                    <!--? Mensajes de error-->
+                    @if (inputError !== "") {
+                        <div class="p-3 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
+                            {{inputError}}
+                        </div>
+                    }
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
-                        <input type="submit" class="form-control">
+                        <input type="submit" class="form-control" value="Ingresar">
                     </div>
                 </form>
             </div>
