--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,21 +11,19 @@
                 <form [formGroup]="aFormGroup" (ngSubmit)="onSubmit()">
                     <p class="fs-5 text text-secondary text-center">Ingrese a su cuenta</p>
                     <!--? Input: Usuario-->
-                    <div class="input-group mb-3">
-                        <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingInputUser" placeholder #txtUser
-                                formControlName="username" placeholder required>
-                            <label for="floatingInputUser" class="text-secondary">Usuario</label>
-                        </div>
-                    </div>
+                    <shared-input
+                        [type]="'text'" 
+                        formControlName="username"
+                        [placeholder]="'Usuario'"
+                        [id]="'floatingInputUser'">
+                    </shared-input>
                     <!--? Input: Contraseña-->
-                    <div class="input-group mb-3">
-                        <div class="form-floating">
-                            <input type="password" class="form-control" id="floatingInputPass" #txtPassword
-                                formControlName="password" placeholder required>
-                            <label for="floatingInputPass" class="text-secondary">Contraseña</label>
-                        </div>
-                    </div>
+                    <shared-input 
+                        [type]="'password'"
+                        formControlName="password"
+                        [placeholder]="'Contraseña'"
+                        [id]="'floatingInputPassword'">
+                    </shared-input>
                     <!--? Input: Recaptcha-->
                     <div class="d-flex align-items-center justify-content-center ">
                         <ngx-recaptcha2 [siteKey]="siteKey" formControlName="recaptcha"></ngx-recaptcha2>
