--- a/src/app/components/reportes/reportes.component.html
+++ b/src/app/components/reportes/reportes.component.html
@@ -1,9 +1,11 @@
-<button (click)="downloadReport()" id="download-reporte">Descargar reporte</button>
+<button (click)="downloadReport()" id="download-reporte" class="mt-4 mx-4">Descargar reporte</button>
+<button (click)="downloadSelectedReport()" id="download-reporte" class="mt-4 mx-4">Descargar reporte data seleccionada</button>
+<span id="select-stats"></span>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div >
+    <div class="form p-4" >
         <input type="number" class="form-control" formControlName="n">
-        <input type="submit">
+        <input class="mt-2" type="submit">
     </div>
 </form>
-<div id="ex-table-div"></div>
+<div id="ex-table-div" class="table table-primary thead-dark table-bordered"></div>
 
