--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -5,6 +5,7 @@
             class="form-control" 
             [id]="id" 
             placeholder 
+            [formControl]="formControl"
             #txtUser>
         <label
             [for]="id"
