--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -39,24 +39,6 @@
                         <shared-modal></shared-modal>
                     </div>
                     <!--? Mensajes de error-->
-                    <!-- @if (aFormGroup.get('username')?.hasError('required') && formSubmitted) {
-                    <div
-                        class="p-3 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
-                        Usuario obligatorio
-                    </div>
-                    }
-                    @else if (aFormGroup.get('password')?.hasError('required') && formSubmitted) {
-                        <div
-                            class="p-3 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
-                            Ingrese contraseña
-                        </div>
-                    }
-                    @else if (aFormGroup.get('recaptcha')?.hasError('required') && formSubmitted) {
-                        <div
-                            class="p-3 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
-                            Completar el Captcha
-                        </div>
-                    } -->
                     @if (inputError !== "") {
                         <div
                             class="p-3 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
@@ -65,7 +47,7 @@
                         }
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
-                        <input type="submit" class="form-control btn btn-primary" value="Ingresar" [disabled]="">
+                        <input type="submit" class="form-control btn btn-primary" value="Ingresar" [disabled]="!aFormGroup.valid">
                     </div>
                 </form>
             </div>
