--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container p-lg-2">
+<div class="container pt-l-0">
     <div class="row mx-auto my-5 shadow bg-white rounded w-100 h-100 ">
         <div class="col-lg-5 col-md-12 my-2">
             <!--TODO: LEFT MENU-->
