--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,7 +1,7 @@
 <div class="input-group mb-3 ">
     <!--* Input Group template-->
     <div class="form-floating">
-        <!--? Input-->
+        <!--! INPUT ELEMENT-->
         <input 
             [type]="type"
             class="form-control" 
