--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,11 @@
-<div class="container pt-l-0">
+<div class="container my-auto">
     <div class="row mx-auto my-5 shadow bg-white rounded w-100 h-100 ">
-        <div class="col-lg-5 col-md-12 my-2">
+        <div class="col-lg-5 col-md-12 my-1">
             <!--TODO: LEFT MENU-->
             <!--* LOGO IMAGE -->
             <shared-image [source]="'./assets/images/LOGO-SAFE.png'"  class="d-flex align-items-center justify-content-center py-2"></shared-image>
             <div class="px-2">
-                <p class="fs-5 text text-secondary text-center pb-2">Ingrese a su cuenta</p>
+                <p class="fs-5 text text-secondary text-center pb-1">Ingrese a su cuenta</p>
                 <!--* FORM-->
                 <form [formGroup]="aFormGroup" (ngSubmit)="onSubmit()">
                     <!--? Input: Usuario-->
@@ -33,16 +33,19 @@
                         <ngx-recaptcha2 [siteKey]="siteKey" formControlName="recaptcha"></ngx-recaptcha2>
                     </div>
                     <!--? Olvido contraseña-->
-                    <div class="text-center my-3">
+                    <div class="text-center my-2">
                         <shared-modal></shared-modal>
                     </div>
                     <!--? Mensajes de error-->
                     @if (inputError !== "") {
                         <div
-                            class="p-3 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
+                            class="p-1 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
                             {{inputError}}
                         </div>
-                        }
+                    }
+                    @else {
+                        <div class="p-1 bg-white text-white ">|</div>
+                    }
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
                         <input type="submit" class="form-control btn btn-primary" value="Ingresar" [disabled]="!aFormGroup.valid">
