--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container my-auto">
+<div class="container">
     <div class="row mx-auto my-5 shadow bg-white rounded w-100 h-100 ">
         <div class="col-lg-5 col-md-12 my-1">
             <!--TODO: LEFT MENU-->
