Vertical Align Login Design

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="row mx-auto my-5 shadow bg-white rounded w-100 h-100 ">
-        <div class="col-lg-5 col-md-12 my-1">
+    <div class="m-0 vh-100 row justify-content-center align-items-center text-center">
+        <div class="col-lg-5 col-md-12 my-1 ">
             <!--TODO: LEFT MENU-->
             <!--* LOGO IMAGE -->
             <shared-image [source]="'./assets/images/LOGO-SAFE.png'"  class="d-flex align-items-center justify-content-center py-2"></shared-image>
@@ -55,7 +55,7 @@
         </div>
         <!-- TODO: RIGHT MENU -->
         <!--* SAFE IMAGE-->
-        <div class="col-lg-7 px-0 m-auto h-100  w-50">
+        <div class="col-lg-7 my-1">
             <shared-image [source]="'./assets/images/IMAGEN-PORTAL.png'"  class="d-none d-xl-flex d-lg-flex img-fluid mx-auto"></shared-image>
         </div>
     </div>
