ChangePassword Bug Design

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,8 +1,19 @@
 <div class="m-0 vh-100 row justify-content-center align-items-center text-center">
-    <div class="col-auto bg-danger shadow rounded">
+    <div class="col-auto bg-white shadow rounded">
         <!--TODO: CONTENT-->
         <!--* LOGO CONTAINER-->
-        <shared-image [source]="'./assets/images/LOGO-SAFE.png'"  class="d-flex align-items-center justify-content-center py-2"></shared-image>
-        
+        <shared-image [source]="'./assets/images/LOGO-SAFE.png'"
+            class="d-flex align-items-center justify-content-center py-2"></shared-image>
+        <div class="px-2">
+            <!--? Labels Form-->
+            <p class="fs-5 text text-secondary text-center pb-1">Establecer contraseña</p>
+            <p class="fs-6 text text-secondary text-center pb-1">{{lblFormText}}</p>
+        </div>
+        <hr class="border-2">
+        <!--* Form Section-->
+        <form [formGroup]="fFormGroup">
+            <shared-input [type]="'text'" [placeholder]="'Repetir contraseña nueva'"></shared-input>
+            <shared-input [type]="'password'" [placeholder]="'Contraseña Nueva'" [id]="'newPassword'" [specialInput]="'password'"></shared-input>
+        </form>
     </div>
-</div>
+</div> 
