--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,8 @@
                             [formControl]="getPassword()" 
                             [placeholder]="'Contraseña'"
                             [id]="'password'"
-                            [formSubmitted]="formSubmitted">
+                            [formSubmitted]="formSubmitted"
+                            [specialInput]="'password'">
                         </shared-input>
                     </div>
                     <!--? Input: Recaptcha-->
