--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -17,13 +17,13 @@
         </label>
     </div>
     <!--* Icono (eye) cambia la visibilidad del input (input password)-->
-    @if (id === 'password' && type === 'password') {
+    @if (specialInput === 'password' && type === 'password') {
         <!--? Icono (ojo tachado) cuando la contraseña esta oculta-->
         <div class="bg-light px-2 py-2 border border-1">
             <i (click)="changeType()" class="bi bi-eye-slash text-black " style="font-size: 1.5em; color: #007bff;"></i>
         </div>
     }
-    @else if (id === 'password' && type === 'text') {
+    @else if (specialInput === 'password' && type === 'text') {
         <!--? Icono (ojo completo) cuando la contraseña esta visible-->
         <div class="bg-light px-2 py-2 border border-1">
             <i (click)="changeType()" class="bi bi-eye-fill text-black" style="font-size: 1.5em; color: #007bff;"></i>
