Bug Fixed Login

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,6 +1,6 @@
 <div class="m-0 vh-100 row justify-content-center align-items-center text-center">
     <div class="col-auto bg-white shadow rounded">
-        <!--TODO: CONTENT-->
+        <!--!: CONTENT -->
         <!--* LOGO CONTAINER-->
         <shared-image [source]="'./assets/images/LOGO-SAFE.png'"
             class="d-flex align-items-center justify-content-center py-2"></shared-image>
@@ -12,8 +12,8 @@
         <hr class="border-2">
         <!--* Form Section-->
         <form [formGroup]="fFormGroup">
-            <shared-input [type]="'text'" [placeholder]="'Repetir contraseña nueva'"></shared-input>
-            <shared-input [type]="'password'" [placeholder]="'Contraseña Nueva'" [id]="'newPassword'" [specialInput]="'password'"></shared-input>
+            <shared-input [placeholder]="'Hola'" [id]="'hola1'"></shared-input>
+            <shared-input [placeholder]="'Hola2'" [id]="'hola2'"></shared-input>
         </form>
     </div>
-</div> 
+</div>
