--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="m-0 vh-100 row justify-content-center align-items-center text-center">
+    <div class="m-5 vh-80 shadow row justify-content-center align-items-center text-center">
         <div class="col-lg-5 col-md-12 my-1 ">
             <!--TODO: LEFT MENU-->
             <!--* LOGO IMAGE -->
